--- a/MovieApp/MovieApp.csproj
+++ b/MovieApp/MovieApp.csproj
@@ -13,9 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Areas\Iletisim\Views\Shared\" />
-    <Folder Include="Areas\Kategori\Views\" />
-    <Folder Include="Areas\Kategori\Views\Shared\" />
+    <Folder Include="Views\Detay\" />
     <Folder Include="wwwroot/Admin/" />
   </ItemGroup>
 
